<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>ros2_aruco</name>
	<version>0.1.0</version>
	<description>Aruco Marker Tracking and Pose Estimation wrapper for ROS2</description>
	<maintainer email="simone.giampa@mail.polimi.it">Simone Giampà</maintainer>
	<license>AIRLAB</license>

	<depend>geometry_msgs</depend>
	<depend>std_msgs</depend>
	<depend>sensor_msgs</depend>

	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>

	<export>
		<build_type>ament_python</build_type>
	</export>
</package>